--- a/cluster01.yaml
+++ b/cluster01.yaml
@@ -1,6 +1,6 @@
 # cluster01.yaml
 kind: Cluster
-name: kubernetes_cluster01
+name: kubernetes-cluster01
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   ipFamily: dual
