--- a/cilium-enterprise-values.yaml
+++ b/cilium-enterprise-values.yaml
@@ -2,7 +2,19 @@ hubble:
   enabled: false
   relay:
     enabled: false
-nodeinit:
+ipv6:
   enabled: true
+enterprise:
+  srv6:
+    enabled: true
+    encapMode: srh
+bgpControlPlane:
+  enabled: true
+k8s:
+  requireIPv4PodCIDR: true
+  requireIPv6PodCIDR: true
 ipam:
-  mode: cluster-pool
+  mode: kubernetes
+tunnel: disabled
+ipv4NativeRoutingCIDR: 10.0.0.0/8
+ipv6NativeRoutingCIDR: 2001::/16
