--- a/cluster02.yaml
+++ b/cluster02.yaml
@@ -1,6 +1,6 @@
 # cluster02.yaml
 kind: Cluster
-name: kubernetes-cluster02
+name: cluster02
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   ipFamily: dual
