--- a/cluster01.yaml
+++ b/cluster01.yaml
@@ -14,13 +14,6 @@ nodes:
     kind: InitConfiguration
     nodeRegistration:
       kubeletExtraArgs:
-        node-ip: "172.10.10.2,fd00:172:10:10::2"
+        node-ip: "172.10.10.2,beaf:172:10:10::2"
 #BGP local peer address
 - role: worker
-  kubeadmConfigPatches:
-  - |
-    kind: JoinConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-ip: "172.10.10.3,fd00:172:10:10::3"
-#BGP local peer address
