--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -1,50 +1,68 @@
+!! Building configuration
+!! IOS XR Configuration 7.10.2
+!! Last configuration change at Wed Apr  3 10:59:02 2024 by clab
 !
-hostname {{ .ShortName }}
-!
+hostname PE02
+
 username clab
  group root-lr
  group cisco-support
- secret clab@123
+ secret clab
 !
-grpc
-{{ if .Env.CLAB_MGMT_VRF }} vrf {{ .Env.CLAB_MGMT_VRF }}{{end}}
- port 9339
- no-tls
- address-family dual
-!
-{{- if .Env.CLAB_MGMT_VRF }}
-vrf {{ .Env.CLAB_MGMT_VRF }}
+
+vrf MGMT-VRF
+ description **MGMT-VRF**
  address-family ipv4 unicast
  !
- address-family ipv6 unicast
- !
-{{- end}}
 !
 line default
-  transport input ssh
+ transport input ssh
+!
+call-home
+ service active
+ contact smart-licensing
+ profile CiscoTAC-1
+  active
+  destination transport-method email disable
+  destination transport-method http
+ !
 !
 netconf-yang agent
  ssh
 !
+
 interface MgmtEth0/RP0/CPU0/0
-{{ if .Env.CLAB_MGMT_VRF }} vrf {{ .Env.CLAB_MGMT_VRF }}{{end}}
+ vrf MGMT-VRF
+ ip address {{ .Env.MGMT_IP }}
+ load-interval 30
 !
+int Gig 0/0/0/0
+    no shut
+    description towards PE01
+
+int Gig 0/0/0/1
+    no shut
+    description towards RR
+
+int Gig 0/0/0/2
+    no shut
+    description towards cl02server01:net0
+    ipv4 address 172.200.200.1/24
+
+
 router static
-{{ if .Env.CLAB_MGMT_VRF }} vrf {{ .Env.CLAB_MGMT_VRF }}{{end}}
-{{- if .MgmtIPv4Gateway }}
- address-family ipv4 unicast
-  0.0.0.0/0 MgmtEth0/RP0/CPU0/0 {{ .MgmtIPv4Gateway }}
+ vrf MGMT-VRF
+  address-family ipv4 unicast
+   0.0.0.0/0 MgmtEth0/RP0/CPU0/0 172.20.20.1
   !
-{{- end}}
-{{- if .MgmtIPv6Gateway }}
- address-family ipv6 unicast
-  ::/0 MgmtEth0/RP0/CPU0/0 {{ .MgmtIPv6Gateway }}
-  !
-{{- end}}
+ !
 !
+
+netconf agent tty
+!
+ssh client vrf MGMT-VRF
+ssh server capability netconf-xml
 ssh server v2
-{{- if .Env.CLAB_MGMT_VRF }}
-ssh server vrf {{ .Env.CLAB_MGMT_VRF }}
-{{- end}}
-ssh server netconf {{ if .Env.CLAB_MGMT_VRF }} vrf {{ .Env.CLAB_MGMT_VRF }}{{end}}
+ssh server vrf MGMT-VRF
+ssh server netconf vrf MGMT-VRF
 end
