--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -46,7 +46,7 @@ topology:
       - ip addr add beaf:172:100:100::2/64 dev net0
       # These static routes are needed because Cilium cannot import routes currently.
       - ip route add 10.0.0.0/8 via 172.100.100.1 dev net0
-      - ip route add fd00::/16 via fd00:172:100:100::1 dev net0
+      - ip route add fd00::/16 via beaf:172:100:100::1 dev net0
 
     cl01server02:
       kind: linux
@@ -66,7 +66,7 @@ topology:
       - ip addr add beaf:172:200:200::2/64 dev net0
       # These static routes are needed because Cilium cannot import routes currently.
       - ip route add 10.0.0.0/8 via 172.20.20.1 dev net0
-      - ip route add fd00::/16 via fd00:172:200:200::1 dev net0
+      - ip route add fd00::/16 via beaf:172:200:200::1 dev net0
 
     cl02server02:
       kind: linux
