--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -51,7 +51,7 @@ topology:
     cl01server02:
       kind: linux
       image: nicolaka/netshoot:latest
-      network-mode: container:cluster01-worker
+      network-mode: container:clab-cilium-srv6-lab-cluster01-worker
       
 
 # Note: BGP local peer is from control-plane only
@@ -71,7 +71,7 @@ topology:
     cl02server02:
       kind: linux
       image: nicolaka/netshoot:latest
-      network-mode: container:cluster02-worker
+      network-mode: container:clab-cilium-srv6-lab-cluster02-worker
 
   links:
     - endpoints: ["pe1:Gi0-0-0-0", "pe2:Gi0-0-0-0"]
