--- a/cluster01.yaml
+++ b/cluster01.yaml
@@ -1,11 +1,11 @@
 # cluster01.yaml
 kind: Cluster
-name: clab-cilium-srv6-lab-cluster01
+name: cilium-srv6-lab-cluster01
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
   ipFamily: dual
   disableDefaultCNI: true 
-  podSubnet: 10.1.0.0/16,2001:db8:10:0::/63
+  podSubnet: 10.1.0.0/16,2001:dead:10:0::/63
   serviceSubnet: 10.111.0.0/16,2001:beaf:1::/108
 nodes:
 - role: control-plane
@@ -14,6 +14,6 @@ nodes:
     kind: InitConfiguration
     nodeRegistration:
       kubeletExtraArgs:
-        node-ip: "172.100.100.2,beaf:172:100:100::2"
+        node-ip: "172.100.100.2,fd00:172:100:100::2"
 #BGP local peer address
 - role: worker
