--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -36,17 +36,17 @@ topology:
         loopback: 3.3.3.3
 
 # Note: BGP local peer is from control-plane only
-# node-ip: "172.10.10.2,beef:172:100:100::2"
+# node-ip: "172.100.100.2,fd00:172:100:100::2"
     cl01server01:
       kind: linux
       image: nicolaka/netshoot:latest
       network-mode: container:cilium-srv6-lab-cluster01-control-plane
       exec:
       - ip addr add 172.100.100.2/24 dev net0
-      - ip addr add beaf:172:100:100::2/64 dev net0
+      - ip addr add fd00:172:100:100::2/64 dev net0
       # These static routes are needed because Cilium cannot import routes currently.
       - ip route add 10.0.0.0/8 via 172.100.100.1 dev net0
-      - ip route add fd00::/16 via beaf:172:100:100::1 dev net0
+      - ip route add fd00::/16 via fd00:172:100:100::1 dev net0
 
     cl01server02:
       kind: linux
@@ -55,18 +55,17 @@ topology:
       
 
 # Note: BGP local peer is from control-plane only
-# node-ip: "172.200.200.2,beef:172:200:200::2"
-
+# node-ip: "172.200.200.2,fd00:172:200:200::2"
     cl02server01:
       kind: linux
       image: nicolaka/netshoot:latest
       network-mode: container:cilium-srv6-lab-cluster02-control-plane
       exec:
       - ip addr add 172.200.200.2/24 dev net0
-      - ip addr add beaf:172:200:200::2/64 dev net0
+      - ip addr add fd00:172:200:200::2/64 dev net0
       # These static routes are needed because Cilium cannot import routes currently.
-      - ip route add 10.0.0.0/8 via 172.20.20.1 dev net0
-      - ip route add fd00::/16 via beaf:172:200:200::1 dev net0
+      - ip route add 10.0.0.0/8 via 172.200.200.1 dev net0
+      - ip route add fd00::/16 via fd00:172:200:200::1 dev net0
 
     cl02server02:
       kind: linux
