--- a/cluster02.yaml
+++ b/cluster02.yaml
@@ -14,6 +14,6 @@ nodes:
     kind: InitConfiguration
     nodeRegistration:
       kubeletExtraArgs:
-        node-ip: "172.200.200.2,beaf:172:200:200::2"
+        node-ip: "172.200.200.2,fd00:172:200:200::2"
 #BGP local peer address
 - role: worker
