--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -37,8 +37,8 @@ topology:
 
 # Note: BGP local peer is from control-plane only
 # node-ip: "172.100.100.2,fd00:172:100:100::2"
-    cl01server01:
-      kind: linux
+    cilium-srv6-lab-cluster01-control-plane:
+      kind: ext-container
       image: nicolaka/netshoot:latest
       network-mode: container:cilium-srv6-lab-cluster01-control-plane
       exec:
@@ -48,16 +48,16 @@ topology:
       - ip route add 10.0.0.0/8 via 172.100.100.1 dev net0
       - ip route add fd00::/16 via fd00:172:100:100::1 dev net0
 
-    cl01server02:
-      kind: linux
+    cilium-srv6-lab-cluster01-worker:
+      kind: ext-container
       image: nicolaka/netshoot:latest
       network-mode: container:cilium-srv6-lab-cluster01-worker
       
 
 # Note: BGP local peer is from control-plane only
 # node-ip: "172.200.200.2,fd00:172:200:200::2"
-    cl02server01:
-      kind: linux
+    cilium-srv6-lab-cluster02-control-plane:
+      kind: ext-container
       image: nicolaka/netshoot:latest
       network-mode: container:cilium-srv6-lab-cluster02-control-plane
       exec:
@@ -67,8 +67,8 @@ topology:
       - ip route add 10.0.0.0/8 via 172.200.200.1 dev net0
       - ip route add fd00::/16 via fd00:172:200:200::1 dev net0
 
-    cl02server02:
-      kind: linux
+    cilium-srv6-lab-cluster02-worker:
+      kind: ext-container
       image: nicolaka/netshoot:latest
       network-mode: container:cilium-srv6-lab-cluster02-worker
 
@@ -76,8 +76,8 @@ topology:
     - endpoints: ["pe1:Gi0-0-0-0", "pe2:Gi0-0-0-0"]
     - endpoints: ["pe1:Gi0-0-0-1", "rr:Gi0-0-0-0"]
     - endpoints: ["pe2:Gi0-0-0-1", "rr:Gi0-0-0-1"]
-    - endpoints: ["cl01server01:net0", "pe1:Gi0-0-0-2"]
-    #- endpoints: ["cl01server01:net1", "rr:Gi0-0-0-2"]
-    - endpoints: ["cl02server01:net0", "pe2:Gi0-0-0-2"]
-    #- endpoints: ["cl02server01:net1", "rr:Gi0-0-0-3"]
+    - endpoints: ["cilium-srv6-lab-cluster01-control-plane:net0", "pe1:Gi0-0-0-2"]
+    #- endpoints: ["cilium-srv6-lab-cluster01-control-plane:net1", "rr:Gi0-0-0-2"]
+    - endpoints: ["cilium-srv6-lab-cluster02-control-plane:net0", "pe2:Gi0-0-0-2"]
+    #- endpoints: ["cilium-srv6-lab-cluster02-control-plane:net1", "rr:Gi0-0-0-3"]
 
