added interfaces to routers

--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -36,20 +36,29 @@ interface MgmtEth0/RP0/CPU0/0
  ip address {{ .Env.MGMT_IP }}
  load-interval 30
 !
+interface loopback0
+ no shut                                                                         
+ description Lo0
+ ipv4 address {{.Env.loopback0}}
+!
 int Gig 0/0/0/0
-    no shut
-    description towards PE01
-
+ no shut
+ description towards PE01
+ ipv4 address 1.1.1.2/30
+ ipv6 address 2001:1:1:1::2/64
+!
 int Gig 0/0/0/1
-    no shut
-    description towards RR
-
+ no shut
+ description towards RR
+ ipv4 address 3.3.3.1/30
+ ipv6 address 2001:3:3:3::1/64
+!
 int Gig 0/0/0/2
-    no shut
-    description towards cl02server01:net0
-    ipv4 address 172.200.200.1/24
-
-
+ no shut
+ description towards cilium-srv6-lab-cluster02-control-plane:net0
+ ipv4 address 172.200.200.1/24
+ ipv6 address 2001:172:200:200::1/64
+!
 router static
  vrf MGMT-VRF
   address-family ipv4 unicast
