--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -36,22 +36,29 @@ interface MgmtEth0/RP0/CPU0/0
  ip address {{ .Env.MGMT_IP }}
  load-interval 30
 !
+interface loopback0
+ no shut                                                                         
+ description Lo0
+ ipv4 address {{.Env.loopback0}}
+!
 int Gig 0/0/0/0
-    no shut
-    description towards PE01
-
+ no shut
+ description towards PE01
+ ipv4 address 2.2.2.2/30
+ ipv6 address 2001:2:2:2::2/64
+!
 int Gig 0/0/0/1
-    no shut
-    description towards PE02
-
+ no shut
+ description towards PE02
+ ipv4 address 3.3.3.2/30
+ ipv6 address 2001:3:3:3::2/64
+!
 int Gig 0/0/0/2
-    no shut
-    description towards cl01server01:net0
-
+ shut
+!
 int Gig 0/0/0/2
-    no shut
-    description towards cl02server01:net0
-
+ shut
+!
 router static
  vrf MGMT-VRF
   address-family ipv4 unicast
