added isis config

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -38,19 +38,20 @@ interface MgmtEth0/RP0/CPU0/0
 interface loopback0
  no shut
  description Lo0
- ipv4 address {{.Env.loopback0}}
+ ipv4 address {{.Env.loopback_v4}}
+ ipv6 address {{.Env.loopback_v6}}
 !    
 int Gig 0/0/0/0
  no shut
  description towards PE02
  ipv4 address 1.1.1.1/30
- ipv6 address 2001:1:1:1::1/64
+ ipv6 address 2001:1:1:1::0/127
 !
 int Gig 0/0/0/1
  no shut
  description towards RR
  ipv4 address 2.2.2.1/30
- ipv6 address 2001:2:2:2::1/64
+ ipv6 address 2001:2:2:2::0/127
 !
 int Gig 0/0/0/2
  no shut
@@ -65,6 +66,54 @@ router static
   !
  !
 !
+router isis TITAN
+ net 49.0901.0000.0000.0001.00
+ is-type level-1
+ nsf ietf
+ !
+ address-family ipv6 unicast
+  metric-style wide
+  microloop avoidance segment-routing
+  prefix-unreachable
+   rx-process-enable
+  router-id Loopback0
+  segment-routing srv6
+   locator MAIN
+   !
+  !
+ !
+ interface Loopback0
+  passive
+  address-family ipv6 unicast
+  !
+ !
+ interface GigabitEthernet0/0/0/0
+  circuit-type level-1
+  point-to-point
+  !
+  address-family ipv6 unicast
+   fast-reroute per-prefix
+   fast-reroute per-prefix ti-lfa
+   metric 1000
+  !       
+ !
+ interface GigabitEthernet0/0/0/1
+  circuit-type level-1
+  point-to-point
+  !
+  address-family ipv6 unicast
+   fast-reroute per-prefix
+   fast-reroute per-prefix ti-lfa
+   metric 1000
+  !
+ !
+!
+segment-routing
+ srv6
+  locators
+   locator MAIN
+    micro-segment behavior unode psp-usd
+    prefix fc00:0:1111::/48
 
 netconf agent tty
 !
