--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -39,7 +39,8 @@ interface MgmtEth0/RP0/CPU0/0
 interface loopback0
  no shut                                                                         
  description Lo0
- ipv4 address {{.Env.loopback0}}
+ ipv4 address {{.Env.loopback_v4}}
+ ipv6 address {{.Env.loopback_v6}}
 !
 int Gig 0/0/0/0
  no shut
@@ -66,6 +67,55 @@ router static
   !
  !
 !
+router isis TITAN
+ net 49.0901.0000.0000.0001.00
+ is-type level-1
+ nsf ietf
+ !
+ address-family ipv6 unicast
+  metric-style wide
+  microloop avoidance segment-routing
+  prefix-unreachable
+   rx-process-enable
+  router-id Loopback0
+  segment-routing srv6
+   locator MAIN
+   !
+  !
+ !
+ interface Loopback0
+  passive
+  address-family ipv6 unicast
+  !
+ !
+ interface GigabitEthernet0/0/0/0
+  circuit-type level-1
+  point-to-point
+  !
+  address-family ipv6 unicast
+   fast-reroute per-prefix
+   fast-reroute per-prefix ti-lfa
+   metric 1000
+  !       
+ !
+ interface GigabitEthernet0/0/0/1
+  circuit-type level-1
+  point-to-point
+  !
+  address-family ipv6 unicast
+   fast-reroute per-prefix
+   fast-reroute per-prefix ti-lfa
+   metric 1000
+  !
+ !
+!
+segment-routing
+ srv6
+  locators
+   locator MAIN
+    micro-segment behavior unode psp-usd
+    prefix fc00:0:2222::/48
+
 
 netconf agent tty
 !
