--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -39,7 +39,8 @@ interface MgmtEth0/RP0/CPU0/0
 interface loopback0
  no shut                                                                         
  description Lo0
- ipv4 address {{.Env.loopback0}}
+ ipv4 address {{.Env.loopback_v4}}
+ ipv6 address {{.Env.loopback_v6}}
 !
 int Gig 0/0/0/0
  no shut
