added RR config

--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -109,6 +109,48 @@ router isis TITAN
   !
  !
 !
+router bgp 65000
+bgp router-id 2.2.2.2
+ bgp graceful-restart restart-time 120
+ bgp graceful-restart graceful-reset
+ bgp graceful-restart stalepath-time 360
+ bgp graceful-restart
+ bgp log neighbor changes detail
+
+address-family vpnv4 unicast
+  vrf all
+   segment-routing srv6
+    locator MAIN
+    alloc mode per-vrf
+   !
+  !
+ !
+ address-family vpnv6 unicast
+  vrf all
+   segment-routing srv6
+    locator MAIN
+    alloc mode per-vrf
+
+neighbor-group TITAN_RR
+  remote-as 65000
+  description ***iBGP peering template for TITAN RR***
+  update-source Loopback0
+  address-family vpnv4 unicast
+   encapsulation-type srv6
+  !
+  address-family vpnv6 unicast
+   encapsulation-type srv6
+  !
+  address-family ipv4 rt-filter
+  !
+  address-family l2vpn evpn
+   encapsulation-type srv6
+ 
+ neighbor fc00:0:3333::1
+  use neighbor-group TITAN_RR
+  description RR01
+!
+!
 segment-routing
  srv6
   locators
