--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -109,6 +109,45 @@ router isis TITAN
   !
  !
 !
+router bgp 65000
+ bgp router-id 3.3.3.3
+ bgp graceful-restart restart-time 120
+ bgp graceful-restart graceful-reset
+ bgp graceful-restart stalepath-time 360
+ bgp graceful-restart
+ bgp log neighbor changes detail
+
+ address-family vpnv4 unicast
+ !
+ address-family vpnv6 unicast
+
+ neighbor-group TITAN_PE
+  remote-as 65000
+  description *** iBGP peering template to TITAN PE ***
+  update-source Loopback0
+  !
+  address-family vpnv4 unicast
+   route-reflector-client
+  !
+  address-family vpnv6 unicast
+   route-reflector-client
+  !
+  address-family ipv4 rt-filter
+   route-reflector-client
+  !
+  address-family l2vpn evpn
+   route-reflector-client
+  !
+ !
+ neighbor fc00:0:1111::1
+  description PE01
+  use neighbor-group TITAN_RR
+
+neighbor fc00:0:2222::1
+  description PE02
+  use neighbor-group TITAN_RR
+!
+
 segment-routing
  srv6
   locators
