added cilium BGP config

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -57,7 +57,7 @@ int Gig 0/0/0/2
  no shut
  description towards cilium-srv6-lab-cluster01-control-plane:net0
  ipv4 address 172.100.100.1/24
- ipv6 address 2001:172:100:100::1/64
+ ipv6 address fd00:172:100:100::1/64
 !
 router static
  vrf MGMT-VRF
@@ -146,7 +146,19 @@ neighbor-group TITAN_RR
  neighbor fc00:0:3333::1
   use neighbor-group TITAN_RR
   description RR01
+!
+neighbor group CILIUM01
+  remote-as 65001
+  description ***eBGP peering template for Cilium Node01***
+  address-family vpnv4 unicast
+   encapsulation-type srv6
+  !
+  address-family vpnv6 unicast
+   encapsulation-type srv6
 
+ neighbor fd00:172:100:100::2
+  use neighbor-group CILIUM01
+  description Cluster01_Control_Plane
 
 segment-routing
  srv6
