--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -116,11 +116,14 @@ router bgp 65000
  bgp graceful-restart stalepath-time 360
  bgp graceful-restart
  bgp log neighbor changes detail
-
  address-family vpnv4 unicast
  !
  address-family vpnv6 unicast
-
+ !
+ address-family ipv4 rt-filter
+ !
+ address-family l2vpn evpn
+ !
  neighbor-group TITAN_PE
   remote-as 65000
   description *** iBGP peering template to TITAN PE ***
@@ -141,22 +144,19 @@ router bgp 65000
  !
  neighbor fc00:0:1111::1
   description PE01
-  use neighbor-group TITAN_RR
+  use neighbor-group TITAN_PE
 
 neighbor fc00:0:2222::1
   description PE02
-  use neighbor-group TITAN_RR
+  use neighbor-group TITAN_PE
 !
-
 segment-routing
  srv6
   locators
    locator MAIN
     micro-segment behavior unode psp-usd
     prefix fc00:0:3333::/48
-
-
-
+!
 netconf agent tty
 !
 ssh client vrf MGMT-VRF
