--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -58,7 +58,7 @@ int Gig 0/0/0/2
  no shut
  description towards cilium-srv6-lab-cluster02-control-plane:net0
  ipv4 address 172.200.200.1/24
- ipv6 address 2001:172:200:200::1/64
+ ipv6 address fd00:172:200:200::1/64
 !
 router static
  vrf MGMT-VRF
@@ -149,6 +149,20 @@ neighbor-group TITAN_RR
  neighbor fc00:0:3333::1
   use neighbor-group TITAN_RR
   description RR01
+!
+neighbor group CILIUM02
+  remote-as 65002
+  description ***eBGP peering template for Cilium Node02***
+  address-family vpnv4 unicast
+   encapsulation-type srv6
+  !
+  address-family vpnv6 unicast
+   encapsulation-type srv6
+
+ neighbor fd00:172:200:200::2
+  use neighbor-group CILIUM01
+  description Cluster01_Control_Plane
+
 !
 !
 segment-routing
