--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -147,7 +147,7 @@ neighbor-group TITAN_RR
   use neighbor-group TITAN_RR
   description RR01
 !
-neighbor group CILIUM01
+neighbor-group CILIUM01
   remote-as 65001
   description ***eBGP peering template for Cilium Node01***
   address-family vpnv4 unicast
