--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -150,7 +150,7 @@ neighbor-group TITAN_RR
   use neighbor-group TITAN_RR
   description RR01
 !
-neighbor group CILIUM02
+neighbor-group CILIUM02
   remote-as 65002
   description ***eBGP peering template for Cilium Node02***
   address-family vpnv4 unicast
