--- a/cilium-bgp-peering-policies.yaml
+++ b/cilium-bgp-peering-policies.yaml
@@ -14,6 +14,12 @@ spec:
     neighbors:
     - peerAddress: "fd00:172:100:100::1/128"
       peerASN: 65000
+      connectRetryTimeSeconds: 120
+      holdTimeSeconds: 180
+      keepAliveTimeSeconds: 60
+      gracefulRestart:
+        enabled: true
+        restartTimeSeconds: 120
       families:
        - {afi: "ipv4", safi: "mpls_vpn"}
        - {afi: "ipv6", safi: "mpls_vpn"}
@@ -33,6 +39,12 @@ spec:
     neighbors:
     - peerAddress: "fd00:172:200:200::1/128"
       peerASN: 65000
+      connectRetryTimeSeconds: 120
+      holdTimeSeconds: 180
+      keepAliveTimeSeconds: 60
+      gracefulRestart:
+        enabled: true
+        restartTimeSeconds: 120
       families:
        - {afi: "ipv4", safi: "mpls_vpn"}
        - {afi: "ipv6", safi: "mpls_vpn"}
