add vrf cilium policy

--- a/Containerlab/topology.yaml
+++ b/Containerlab/topology.yaml
@@ -44,6 +44,8 @@ topology:
     cilium-srv6-lab-cluster01-control-plane:
       kind: ext-container
       image: nicolaka/netshoot:latest
+      labels:
+        vrf: vrf01
       exec:
       - ip addr add 172.100.100.2/24 dev net0
       - ip addr add fd00:172:100:100::2/64 dev net0
@@ -61,6 +63,8 @@ topology:
     cilium-srv6-lab-cluster02-control-plane:
       kind: ext-container
       image: nicolaka/netshoot:latest
+      labels:
+        vrf: vrf02
       exec:
       - ip addr add 172.200.200.2/24 dev net0
       - ip addr add fd00:172:200:200::2/64 dev net0
