added bgp soft inbound

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -147,9 +147,11 @@ neighbor-group CILIUM01
   remote-as 65001
   description ***eBGP peering template for Cilium Node01***
   address-family vpnv4 unicast
+   soft-reconfiguration inbound always
    encapsulation-type srv6
   !
   address-family vpnv6 unicast
+   soft-reconfiguration inbound always
    encapsulation-type srv6
 
  neighbor fd00:172:100:100::2
