--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -150,9 +150,11 @@ neighbor-group CILIUM02
   remote-as 65002
   description ***eBGP peering template for Cilium Node02***
   address-family vpnv4 unicast
+   soft-reconfiguration inbound always
    encapsulation-type srv6
   !
   address-family vpnv6 unicast
+   soft-reconfiguration inbound always
    encapsulation-type srv6
 
  neighbor fd00:172:200:200::2
