--- a/locator-pool.yaml
+++ b/locator-pool.yaml
@@ -8,13 +8,13 @@ metadata:
 spec:
   behaviorType: uSID
   prefix: fd00:1::/48
-  locatorLenBits: 64 <= Explicitly specify locator length
+  locatorLenBits: 64
   structure:
     locatorBlockLenBits: 32
     locatorNodeLenBits: 16
     functionLenBits: 32
     argumentLenBits: 0
-  ---
+---
 apiVersion: isovalent.com/v1alpha1
 kind: IsovalentSRv6LocatorPool
 metadata:
@@ -25,7 +25,7 @@ metadata:
 spec:
   behaviorType: uSID
   prefix: fd00:2::/48
-  locatorLenBits: 64 <= Explicitly specify locator length
+  locatorLenBits: 64
   structure:
     locatorBlockLenBits: 32
     locatorNodeLenBits: 16
