added Cilium bpg to RR

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -76,7 +76,9 @@ router isis TITAN
   microloop avoidance segment-routing
   prefix-unreachable
    rx-process-enable
+   !
   router-id Loopback0
+  redistribute connected level-1
   segment-routing srv6
    locator MAIN
    !
@@ -157,6 +159,12 @@ neighbor-group CILIUM01
  neighbor fd00:172:100:100::2
   use neighbor-group CILIUM01
   description Cluster01_Control_Plane
+  !
+  address-family vpnv4 unicast
+   route-policy PASS in
+  !
+  address-family vpnv6 unicast
+   route-policy PASS in
 
 segment-routing
  srv6
@@ -164,6 +172,13 @@ segment-routing
    locator MAIN
     micro-segment behavior unode psp-usd
     prefix fc00:0:1111::/48
+
+!
+route-policy PASS
+  pass
+  done
+end-policy
+!
 
 netconf agent tty
 !
