--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -77,7 +77,9 @@ router isis TITAN
   microloop avoidance segment-routing
   prefix-unreachable
    rx-process-enable
+   !
   router-id Loopback0
+  redistribute connected level-1
   segment-routing srv6
    locator MAIN
    !
@@ -160,7 +162,12 @@ neighbor-group CILIUM02
  neighbor fd00:172:200:200::2
   use neighbor-group CILIUM02
   description Cluster02_Control_Plane
-
+  !
+  address-family vpnv4 unicast
+   route-policy PASS in
+  !
+  address-family vpnv6 unicast
+   route-policy PASS in
 !
 !
 segment-routing
@@ -169,7 +176,12 @@ segment-routing
    locator MAIN
     micro-segment behavior unode psp-usd
     prefix fc00:0:2222::/48
-
+!
+route-policy PASS
+  pass
+  done
+end-policy
+!
 
 netconf agent tty
 !
