--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -146,12 +146,46 @@ neighbor fc00:0:2222::1
   description PE02
   use neighbor-group TITAN_PE
 !
+neighbor fd00:172:100:100::2
+  description CILIUM01
+  remote-as 65001
+  update-source Loopback0
+  !
+  address-family vpnv4 unicast
+   route-reflector-client
+  !
+  address-family vpnv6 unicast
+   route-reflector-client
+  !
+  address-family ipv4 unicast
+   route-reflector-client
+!
+neighbor fd00:172:200:200::2
+  description CILIUM02
+  remote-as 65001
+  update-source Loopback0
+  !
+  address-family vpnv4 unicast
+   route-reflector-client
+  !
+  address-family vpnv6 unicast
+   route-reflector-client
+  !
+  address-family ipv4 unicast
+   route-reflector-client
+!
+
 segment-routing
  srv6
   locators
    locator MAIN
     micro-segment behavior unode psp-usd
     prefix fc00:0:3333::/48
+!
+route-policy PASS
+  pass
+  done
+end-policy
 !
 netconf agent tty
 !
