added locator BGP config

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -155,6 +155,11 @@ neighbor-group CILIUM01
   address-family vpnv6 unicast
    soft-reconfiguration inbound always
    encapsulation-type srv6
+  !
+  address-family ipv6 unicast
+   soft-reconfiguration inbound always
+   encapsulation-type srv6
+  !
 
  neighbor fd00:172:100:100::2
   use neighbor-group CILIUM01
@@ -165,7 +170,12 @@ neighbor-group CILIUM01
   !
   address-family vpnv6 unicast
    route-policy PASS in
-
+  !
+  address-family ipv6 unicast
+    route-policy PASS in
+  !
+!
+!
 segment-routing
  srv6
   locators
