--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -158,6 +158,10 @@ neighbor-group CILIUM02
   address-family vpnv6 unicast
    soft-reconfiguration inbound always
    encapsulation-type srv6
+  !
+   address-family ipv6 unicast
+   soft-reconfiguration inbound always
+   encapsulation-type srv6
 
  neighbor fd00:172:200:200::2
   use neighbor-group CILIUM02
@@ -168,6 +172,10 @@ neighbor-group CILIUM02
   !
   address-family vpnv6 unicast
    route-policy PASS in
+  !
+  address-family ipv6 unicast
+    route-policy PASS in
+  !
 !
 !
 segment-routing
