--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -149,6 +149,7 @@ neighbor fc00:0:2222::1
 neighbor fd00:172:100:100::2
   description CILIUM01
   remote-as 65001
+  ebgp-multihop 255
   update-source Loopback0
   !
   address-family vpnv4 unicast
@@ -160,6 +161,7 @@ neighbor fd00:172:100:100::2
 neighbor fd00:172:200:200::2
   description CILIUM02
   remote-as 65002
+  ebgp-multihop 255
   update-source Loopback0
   !
   address-family vpnv4 unicast
