changed BGP config

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -113,8 +113,7 @@ router isis TITAN
 router bgp 65000
  bgp router-id 1.1.1.1
  bgp log neighbor changes detail
-
-address-family vpnv4 unicast
+ address-family vpnv4 unicast
   vrf all
    segment-routing srv6
     locator MAIN
@@ -122,13 +121,28 @@ address-family vpnv4 unicast
    !
   !
  !
+ address-family ipv6 unicast
+  segment-routing srv6
+   locator MAIN
+  !
+ !
  address-family vpnv6 unicast
   vrf all
    segment-routing srv6
     locator MAIN
     alloc mode per-vrf
-
-neighbor-group TITAN_RR
+   !
+  !
+ !
+ neighbor-group CILIUM01
+  remote-as 65001
+  description ***eBGP peering template for Cilium Node01***
+  address-family ipv6 unicast
+   encapsulation-type srv6
+   soft-reconfiguration inbound always
+  !
+ !
+ neighbor-group TITAN_RR
   remote-as 65000
   description ***iBGP peering template for TITAN RR***
   update-source Loopback0
@@ -138,44 +152,18 @@ neighbor-group TITAN_RR
   address-family vpnv6 unicast
    encapsulation-type srv6
   !
-  address-family ipv4 rt-filter
-  !
- 
+ !
  neighbor fc00:0:3333::1
   use neighbor-group TITAN_RR
   description RR01
-!
-neighbor-group CILIUM01
-  remote-as 65001
-  description ***eBGP peering template for Cilium Node01***
-  address-family vpnv4 unicast
-   soft-reconfiguration inbound always
-   encapsulation-type srv6
-  !
-  address-family vpnv6 unicast
-   soft-reconfiguration inbound always
-   encapsulation-type srv6
-  !
-  address-family ipv6 unicast
-   soft-reconfiguration inbound always
-   encapsulation-type srv6
-  !
-
+ !
  neighbor fd00:172:100:100::2
   use neighbor-group CILIUM01
   description Cluster01_Control_Plane
-  !
-  address-family vpnv4 unicast
-   route-policy PASS in
-  !
-  address-family vpnv6 unicast
-   route-policy PASS in
-  !
   address-family ipv6 unicast
-    route-policy PASS in
-    route-policy PASS out
+   route-policy PASS in
   !
-!
+ !
 !
 segment-routing
  srv6
