--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -124,7 +124,6 @@ router bgp 65000
   remote-as 65000
   description *** iBGP peering template to TITAN PE ***
   update-source Loopback0
-  !
   address-family vpnv4 unicast
    route-reflector-client
   !
@@ -139,38 +138,37 @@ router bgp 65000
   !
  !
  neighbor fc00:0:1111::1
+  use neighbor-group TITAN_PE
   description PE01
+ !
+ neighbor fc00:0:2222::1
   use neighbor-group TITAN_PE
-
-neighbor fc00:0:2222::1
   description PE02
-  use neighbor-group TITAN_PE
-!
-neighbor fd00:172:100:100::2
-  description CILIUM01
+ !
+ neighbor fd00:172:100:100::2
   remote-as 65001
   ebgp-multihop 255
+  description CILIUM01
   update-source Loopback0
-  !
   address-family vpnv4 unicast
+   soft-reconfiguration inbound
   !
   address-family vpnv6 unicast
+   soft-reconfiguration inbound
   !
-  address-family ipv4 unicast
-!
-neighbor fd00:172:200:200::2
-  description CILIUM02
+ !
+ neighbor fd00:172:200:200::2
   remote-as 65002
   ebgp-multihop 255
+  description CILIUM02
   update-source Loopback0
-  !
   address-family vpnv4 unicast
+   soft-reconfiguration inbound
   !
   address-family vpnv6 unicast
+   soft-reconfiguration inbound
   !
-  address-family ipv4 unicast
-!
-
+ !
 segment-routing
  srv6
   locators
