--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -114,8 +114,7 @@ router isis TITAN
 router bgp 65000
  bgp router-id 2.2.2.2
  bgp log neighbor changes detail
-
-address-family vpnv4 unicast
+ address-family vpnv4 unicast
   vrf all
    segment-routing srv6
     locator MAIN
@@ -123,13 +122,28 @@ address-family vpnv4 unicast
    !
   !
  !
+ address-family ipv6 unicast
+  segment-routing srv6
+   locator MAIN
+  !
+ !
  address-family vpnv6 unicast
   vrf all
    segment-routing srv6
     locator MAIN
     alloc mode per-vrf
-
-neighbor-group TITAN_RR
+   !
+  !
+ !
+ neighbor-group CILIUM02
+  remote-as 65002
+  description ***eBGP peering template for Cilium Node02***
+  address-family ipv6 unicast
+   encapsulation-type srv6
+   soft-reconfiguration inbound always
+  !
+ !
+ neighbor-group TITAN_RR
   remote-as 65000
   description ***iBGP peering template for TITAN RR***
   update-source Loopback0
@@ -139,45 +153,18 @@ neighbor-group TITAN_RR
   address-family vpnv6 unicast
    encapsulation-type srv6
   !
-  address-family ipv4 rt-filter
-  !
-  address-family l2vpn evpn
-   encapsulation-type srv6
- 
+ !
  neighbor fc00:0:3333::1
   use neighbor-group TITAN_RR
   description RR01
-!
-neighbor-group CILIUM02
-  remote-as 65002
-  description ***eBGP peering template for Cilium Node02***
-  address-family vpnv4 unicast
-   soft-reconfiguration inbound always
-   encapsulation-type srv6
-  !
-  address-family vpnv6 unicast
-   soft-reconfiguration inbound always
-   encapsulation-type srv6
-  !
-   address-family ipv6 unicast
-   soft-reconfiguration inbound always
-   encapsulation-type srv6
-
+ !
  neighbor fd00:172:200:200::2
   use neighbor-group CILIUM02
   description Cluster02_Control_Plane
-  !
-  address-family vpnv4 unicast
-   route-policy PASS in
-  !
-  address-family vpnv6 unicast
-   route-policy PASS in
-  !
   address-family ipv6 unicast
-    route-policy PASS in
-    route-policy PASS out
+   route-policy PASS in
   !
-!
+ !
 !
 segment-routing
  srv6
