--- a/cilium-enterprise-values.yaml
+++ b/cilium-enterprise-values.yaml
@@ -4,6 +4,8 @@ hubble:
     enabled: false
 ipv6:
   enabled: true
+enableIPv6Masquerade:
+  enabled: false
 enterprise:
   srv6:
     enabled: true
