add BGP out filter

--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -163,6 +163,7 @@ router bgp 65000
   description Cluster02_Control_Plane
   address-family ipv6 unicast
    route-policy PASS in
+   route-policy PASS out
   !
  !
 !
