--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -162,6 +162,7 @@ router bgp 65000
   description Cluster01_Control_Plane
   address-family ipv6 unicast
    route-policy PASS in
+   route-policy PASS out
   !
  !
 !
