changed setup to pure iBGP

--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -135,8 +135,8 @@ router bgp 65000
   !
  !
  neighbor-group CILIUM01
-  remote-as 65001
-  description ***eBGP peering template for Cilium Node01***
+  remote-as 65000
+  description ***iBGP peering template for Cilium Node01***
   address-family ipv6 unicast
    encapsulation-type srv6
    soft-reconfiguration inbound always
