--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -136,8 +136,8 @@ router bgp 65000
   !
  !
  neighbor-group CILIUM02
-  remote-as 65002
-  description ***eBGP peering template for Cilium Node02***
+  remote-as 65000
+  description ***iBGP peering template for Cilium Node02***
   address-family ipv6 unicast
    encapsulation-type srv6
    soft-reconfiguration inbound always
