--- a/cilium-enterprise-values.yaml
+++ b/cilium-enterprise-values.yaml
@@ -8,6 +8,7 @@ enterprise:
   srv6:
     enabled: true
     encapMode: reduced
+    locatorPoolEnabled: true
 bgpControlPlane:
   enabled: true
 k8s:
