added isis and bgp redistribution

--- a/Containerlab/pe02.cfg
+++ b/Containerlab/pe02.cfg
@@ -80,6 +80,7 @@ router isis TITAN
    !
   router-id Loopback0
   redistribute connected level-1
+  redistribute bgp 65000
   segment-routing srv6
    locator MAIN
    !
@@ -126,6 +127,7 @@ router bgp 65000
   segment-routing srv6
    locator MAIN
   !
+  redistribute isis TITAN
  !
  address-family vpnv6 unicast
   vrf all
