--- a/Containerlab/pe01.cfg
+++ b/Containerlab/pe01.cfg
@@ -79,6 +79,7 @@ router isis TITAN
    !
   router-id Loopback0
   redistribute connected level-1
+  redistribute bgp 65000
   segment-routing srv6
    locator MAIN
    !
@@ -125,6 +126,7 @@ router bgp 65000
   segment-routing srv6
    locator MAIN
   !
+  redistribute isis TITAN
  !
  address-family vpnv6 unicast
   vrf all
