--- a/cluster02.yaml
+++ b/cluster02.yaml
@@ -17,3 +17,9 @@ nodes:
         node-ip: "172.200.200.2,fd00:172:200:200::2"
 #BGP local peer address
 - role: worker
+  kubeadmConfigPatches:
+  - |
+    kind: InitConfiguration
+    nodeRegistration:
+      kubeletExtraArgs:
+        node-ip: "10.2.2.2,2001:dead:10:2:2::2"
