added rr-client for Cilium peers

--- a/Containerlab/rr.cfg
+++ b/Containerlab/rr.cfg
@@ -151,6 +151,7 @@ router bgp 65000
   description CILIUM01
   update-source Loopback0
   address-family vpnv4 unicast
+    route-reflector-client
    soft-reconfiguration inbound
   !
   address-family vpnv6 unicast
@@ -163,6 +164,7 @@ router bgp 65000
   description CILIUM02
   update-source Loopback0
   address-family vpnv4 unicast
+    route-reflector-client
    soft-reconfiguration inbound
   !
   address-family vpnv6 unicast
