--- a/cluster01.yaml
+++ b/cluster01.yaml
@@ -9,6 +9,9 @@ networking:
   serviceSubnet: 10.111.0.0/16,2001:beaf:1::/108
 nodes:
 - role: control-plane
+  image: nicolaka/netshoot:latest
+  labels:
+    vrf: vrf01
   kubeadmConfigPatches:
   - |
     kind: InitConfiguration
@@ -17,6 +20,9 @@ nodes:
         node-ip: "172.100.100.2,fd00:172:100:100::2"
 #BGP local peer address
 - role: worker
+  image: nicolaka/netshoot:latest
+  labels:
+    vrf: vrf01
   kubeadmConfigPatches:
   - |
     kind: InitConfiguration
