--- a/cluster02.yaml
+++ b/cluster02.yaml
@@ -9,6 +9,9 @@ networking:
   serviceSubnet: 10.222.0.0/16,2001:beaf:2::/108
 nodes:
 - role: control-plane
+  image: nicolaka/netshoot:latest
+  labels:
+    vrf: vrf01
   kubeadmConfigPatches:
   - |
     kind: InitConfiguration
@@ -17,6 +20,9 @@ nodes:
         node-ip: "172.200.200.2,fd00:172:200:200::2"
 #BGP local peer address
 - role: worker
+  image: nicolaka/netshoot:latest
+  labels:
+    vrf: vrf01
   kubeadmConfigPatches:
   - |
     kind: InitConfiguration
